--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["kevlarr <6306496+kevlarr@users.noreply.github.com>"]
 [tool.poetry.dependencies]
 python = "^3.10"
 Django = "^4.0.3"
+psycopg2 = "^2.9.3"
+django-environ = "^0.8.1"
 
 [tool.poetry.dev-dependencies]
 
