--- a/.env.dist
+++ b/.env.dist
@@ -1,8 +1,19 @@
+# Mostly sensible defaults for local development,
+# assuming a standard PostgreSQL server is running.
+#
+# The variables
+
+# Django project settings
+#
 # SECURITY WARNING: don't run with debug turned on in production!
 DJANGO_DEBUG=true
 # SECURITY WARNING: keep the secret key used in production secret!
 DJANGO_SECRET_KEY=this-is-the-most-secretest-key-ever
 
+# These defaults assume a standard PostgreSQL server is running
+# on the host. If connecting to a containerized database, these
+# values will need to be updated
+#
 # PostgreSQL server host
 POSTGRES_HOST=localhost
 # PostgreSQL server port
@@ -13,5 +24,4 @@ POSTGRES_NAME=blahgr_dev
 POSTGRES_USER=blahgr
 # PostgreSQL user password
 POSTGRES_PASSWORD=
-
 
