--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ psycopg2 = "^2.9.3"
 django-environ = "^0.8.1"
 
 [tool.poetry.dev-dependencies]
+django-seed = "^0.3.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
