--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '2'
 
 services:
   postgres:
@@ -11,6 +11,25 @@ services:
       - pgdata:/var/lib/postgresql/data
     ports:
       - '5555:5432'
+    healthcheck:
+        test: [ "CMD", "pg_isready", "-q", "-d", "blahgr_dev", "-U", "blahgr" ]
+        timeout: 45s
+        interval: 10s
+        retries: 10
+
+  server:
+    depends_on:
+      postgres:
+        condition: service_healthy
+    build: .
+    environment:
+      - POSTGRES_HOST=postgres
+      - POSTGRES_PORT=5432
+      - POSTGRES_PASSWORD=password
+    volumes:
+      - .:/blahgr
+    ports:
+      - '8000:8000'
 
 volumes:
   pgdata:
