--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,7 @@
-version: '3'
+# This is technically out-dated, but version 2 offers us `depends_on`
+# which is *incredibly* useful, and version 3 is really mainly updated
+# for use in docker swarm, which... not interested in.
+version: '2'
 
 services:
   postgres:
@@ -11,6 +14,27 @@ services:
       - pgdata:/var/lib/postgresql/data
     ports:
       - '5555:5432'
+    healthcheck:
+        test: [ "CMD", "pg_isready", "-q", "-d", "blahgr_dev", "-U", "blahgr" ]
+        timeout: 45s
+        interval: 10s
+        retries: 10
+
+  server:
+    depends_on:
+      postgres:
+        condition: service_healthy
+    build:
+      context: .
+      dockerfile: .docker/Dockerfile
+    environment:
+      - POSTGRES_HOST=postgres
+      - POSTGRES_PORT=5432
+      - POSTGRES_PASSWORD=password
+    volumes:
+      - .:/blahgr
+    ports:
+      - '8000:8000'
 
 volumes:
   pgdata:
